# ss-mcp

./: CLAUDE.md  README.md  ruff.toml
.claude/commands/: msg.md  w.md
configs/claude/: servers.json
scripts/: register_user.sh
servers/_template/: pyproject.toml
servers/_template/src/_template/: __init__.py  server.py
servers/_template/tests/: __init__.py
servers/code_review/: .env.example  README.md  pyproject.toml
servers/code_review/code_review/: __init__.py  server.py
servers/code_review/tests/: __init__.py  test_server.py
shared/mcp_shared/: __init__.py  limits.py  repo_guard.py
