[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-code-review"
version = "0.1.0"
description = "Code review MCP server using OpenAI"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
mcp-code-review = "code_review.server:main"

[tool.hatch.build.targets.wheel]
packages = ["code_review"]
